--- a/.github/workflows/deploy-to-dev.yml
+++ b/.github/workflows/deploy-to-dev.yml
@@ -4,9 +4,9 @@ on:
   workflow_dispatch:
     inputs:
       branch:
-        description: 'Branch to deploy'
+        description: "Branch to deploy"
         required: true
-        default: 'main'
+        default: "main"
 
 jobs:
   deploy:
@@ -30,6 +30,14 @@ jobs:
 
       - name: Build Go project
         run: GOOS=linux GOARCH=amd64 go build -o addi-server
+
+      - name: Print VM user
+        run: |
+          echo "Deploying to user: ${{ secrets.GCP_DEV_VM_USER }}"
+
+      - name: Print VM IP
+        run: |
+          echo "Deploying to VM IP: ${{ secrets.GCP_DEV_VM_IP }}"
 
       - name: Deploy binary to GCP VM
         run: |
